--- a/src/Web.WebApp/Pages/_Host.cshtml
+++ b/src/Web.WebApp/Pages/_Host.cshtml
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="~/css/bootstrap/bootstrap.min.css" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 
+    <link rel="stylesheet" href="~/Croppie/croppie.min.css" />
+
     <link href="css/site.css" rel="stylesheet" />
     <link href="Web.WebApp.styles.css" rel="stylesheet" />
 </head>
