--- a/src/Web.WebApp/Pages/Admin/IconEditDialog.razor
+++ b/src/Web.WebApp/Pages/Admin/IconEditDialog.razor
@@ -223,7 +223,7 @@
             }
 
         } 
-        catch (Exception ex)
+        catch (Exception)
         {
             cts.Cancel();
             Snackbar.Clear();
