--- a/src/Web.WebApp/Pages/Account/Register.razor
+++ b/src/Web.WebApp/Pages/Account/Register.razor
@@ -107,7 +107,7 @@
         }
 
         // create
-        var subscription = new Subscription()
+        var subscription = new SubscriptionDto()
         {
             UserId = Guid.Empty,
             SubscriptionType = Core.Domain.Enums.SubscriptionType.Free,
