--- a/src/Web.WebApp/_Imports.razor
+++ b/src/Web.WebApp/_Imports.razor
@@ -10,6 +10,7 @@
 @using Web.WebApp.Shared
 @using Web.WebApp.Components.Breadcrumbs
 @using MudBlazor
+@using Web.WebApp.Components.Ui
 
 
 @attribute [Authorize]
