--- a/src/Web.WebApp/Pages/Admin/SubscriptionEditDialog.razor
+++ b/src/Web.WebApp/Pages/Admin/SubscriptionEditDialog.razor
@@ -38,7 +38,8 @@
                 </MudItem>
 
                 <MudItem xs="12" sm="6">
-                    <MudDatePicker Label="Valid From" @bind-Date="@InputModel.ValidFrom" For="@(() => InputModel.ValidFrom)" DateFormat="dd/MM/yyyy" DisableToolbar="true"/>
+                    <MudDatePicker Label="Valid From" @bind-Date="@InputModel.ValidFrom" For="@(() => InputModel.ValidFrom)"
+                        Placeholder="dd/mm/yyyy" DateFormat="dd/MM/yyyy" DisableToolbar="true"/>
                 </MudItem>
                 <MudItem xs="12" sm="6">
                     <MudDatePicker Label="Valid To" @bind-Date="@InputModel.ValidTo" For="@(() => InputModel.ValidTo)" DateFormat="dd/MM/yyyy" DisableToolbar="true"/>
